--- a/staticman.yml
+++ b/staticman.yml
@@ -3,39 +3,16 @@
 # For example, you can have one property to handle comment submission and
 # another one to handle posts.
 comments:
-  # (*) REQUIRED
-  #
-  # Names of the fields the form is allowed to submit. If a field that is
-  # not here is part of the request, an error will be thrown.
   allowedFields: ["tld", "domain", "directory", "arecord", "discordtag"]
-
-  # (*) REQUIRED
-  #
-  # Name of the branch being used. Must match the one sent in the URL of the
-  # request.
+  
   branch: "master"
-
-  # Text to use as the commit message or pull request title. Accepts placeholders.
-  commitMessage: "Domain request"
-
-  # (*) REQUIRED
-  #
-  # Destination path (filename) for the data files. Accepts placeholders.
+  
   filename: "entry{@timestamp}"
 
-  # The format of the generated data files. Accepted values are "json", "yaml"
-  # or "frontmatter"
-  format: "json"
-
-  # Whether entries need to be appproved before they are published to the main
-  # branch. If set to `true`, a pull request will be created for your approval.
-  # Otherwise, entries will be published to the main branch automatically.
   moderation: true
 
-  # Name of the site. Used in notification emails.
-  name: "tools.strato"
+  path: "_data/comments/{options.slug}"
 
-  # (*) REQUIRED
-  #
-  # Destination path (directory) for the data files. Accepts placeholders.
-  path: "requests/{options.slug}"
+  # Names of required files. If any of these isn't in the request or is empty,
+  # an error will be thrown.
+  requiredFields: ["tld", "domain", "directory", "arecord", "discordtag"]
