--- a/staticman.yml
+++ b/staticman.yml
@@ -7,11 +7,11 @@ comments:
   
   branch: "master"
   
-  filename: "entry{@timestamp}"
+  filename: "{@id}"
 
   moderation: true
 
-  path: "_data/comments/{options.slug}"
+  path: "_data/comments/{@timestamp}}"
 
   # Names of required files. If any of these isn't in the request or is empty,
   # an error will be thrown.
