--- a/staticman.yml
+++ b/staticman.yml
@@ -11,7 +11,7 @@ comments:
 
   moderation: true
 
-  path: "_data/comments/{@timestamp}}"
+  path: "_data/comments/{@timestamp}"
 
   # Names of required files. If any of these isn't in the request or is empty,
   # an error will be thrown.
